gem2deb (0.35) UNRELEASED; urgency=medium

  * dh-make-ruby: bump debian/compat template to 10 (Closes: #867741)

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 01 Jul 2017 19:46:54 -0300

gem2deb (0.34) unstable; urgency=medium

  [ Dominic Cleal ]
  * dh-make-ruby: support concurrent dh-make-ruby processes without one of
    them botching "gem to package" mapping cache (Closes: #862409)

  [ Balasankar C ]
  * Change template copyright to Expat (Closes: #786521)

  [ Antonio Terceiro ]
  * Fix most Ruby warning in the code. They were exposed by rake 12.0.0, which
    runs tests with warnings enabled by default.
  * dh-make-ruby:
    - Bump Standards-Version in produced packages to 4.0.0
  * debian/control:
    - Bump Standards-Version to 4.0.0; no changes needed

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 01 Jul 2017 11:30:17 -0300

gem2deb (0.33.1) unstable; urgency=medium

  * Gem2Deb::GemInstaller:
    - don't install extra_rdoc_files
    - don't install examples/*

 -- Antonio Terceiro <terceiro@debian.org>  Wed, 07 Dec 2016 14:47:07 -0200

gem2deb (0.33) unstable; urgency=medium

  [ Antonio Terceiro ]
  * Gem2Deb::Metadata. Parse timestamp as Date insted of Time. Fixes test
    suite on jessie (Closes: #835588)
  * gem2deb-test-runner:
    - fix documentation of $GEM2DEB_TEST_RUNNER in manpage
  * Gem2Deb::GemInstaller
    - don't try to remove empty directories from lib/ if there is no lib/
    - invert the logic for file inclusion. Everything shipped by upstream
      gem authors is installed, except most top-level files and a well-known
      blacklist of directories that should not be installed (test
      infrastructure, etc). Maintainers can still whitelist files, and they
      can also blacklist files.
  * Gem2Deb::Rake::TestTask: allow using a different task name than :default

  [ Stefano Rivera ]
  * gem2deb-test-runner: Add Build-Dep on dpkg-dev. Autopkgtests may use this,
    and don't necessarily have build-essential.
